--- a/front-end/swipecard.css
+++ b/front-end/swipecard.css
@@ -20,7 +20,7 @@ header{
 }
 a {color: lime;}
 h1 {
-  color:  #FFFCF2
+  color:  #FFFCF2;
   font-size: 24vw;
   font-weight: normal;
   text-align: center;
