--- a/Profile_Page_Child/profilePageChild.css
+++ b/Profile_Page_Child/profilePageChild.css
@@ -1,15 +1,14 @@
-
 body{
 	background-color: #51A5C5 ;
 	background-position: center center;
 	background-repeat:  no-repeat;
 	background-attachment: fixed;
 	background-size:  cover;
-	margin: 100px;
-}
-
-.header {
-	width: 460px;
+	margin: 10vw;
+ }
+  
+ .header {
+	width: 80vw;
 	height: 50px;
 	position: relative;
 	background-color: #992E2E;
@@ -22,13 +21,13 @@ body{
 	-webkit-transition: .3s ease;
 	transition: .3s ease;
 	margin: 0 auto;
-}
-
-
-
-.card {
-	width: 460px;
-	height: 1000px;
+ }
+  
+  
+  
+ .card {
+	width: 80vw;
+	height: 240vw;
 	position: relative;
 	background-color: #992E2E;
 	border-radius: 5px;
@@ -38,27 +37,27 @@ body{
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 	-webkit-transition: .3s ease;
 	transition: .3s ease;
-}
-
-/* On mouse-over, add a deeper shadow */
-.card:hover {
+ }
+  
+ /* On mouse-over, add a deeper shadow */
+ .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-/* Add some padding inside the card container */
-.container {
+ }
+  
+ /* Add some padding inside the card container */
+ .container {
   padding: 2px 16px;
-}
-/*Add textbox style*/
-.textbox{
+ }
+ /*Add textbox style*/
+ .textbox{
 	margin-bottom: 25px;
 	padding: 5px;
 	border: 0;
 	background-color: #EAEDED;
 	border-bottom: 2px solid #8E44AD;
 	font-size: 15px;
-}
-
+ }
+  
 	.box .form .button-container {
 		margin: 0 50;
 		text-align: center;
@@ -82,7 +81,7 @@ body{
 		transition: .3s ease;
 		text-decoration:none;
 	}
-
+  
 	.box .form .button-container a span {
 		position: relative;
 		z-index: 1;
@@ -119,3 +118,4 @@ body{
 		-webkit-transform: scale(10);
 		transform: scale(10);
 	}
+ 
