--- a/Profile_Page_Parent/profilePageParent.css
+++ b/Profile_Page_Parent/profilePageParent.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Holtwood+One+SC');
+@import url('https://fonts.googleapis.com/css?family=Walter+Turncoat');
 
 body{
 	background-color: #51A5C5 ;
@@ -21,8 +23,13 @@ body{
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 	-webkit-transition: .3s ease;
 	transition: .3s ease;
+	font-family: "Holtwood One SC", serif;
+		text-align: center;
+		font-size: 35px;
+		color: rgb(255, 255, 255);
+		text-shadow: rgb(0, 0, 0) 2px 2px 2px;
+	margin: 0 auto;
 }
-
 
 
 .card {
@@ -37,6 +44,11 @@ body{
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 	-webkit-transition: .3s ease;
 	transition: .3s ease;
+	font-family: "Walter Turncoat", cursive;
+		text-align: center;
+		font-size: 12px;
+		color: rgb(255, 255, 255);
+		text-shadow: rgb(0, 0, 0) 2px 2px 2px;
 }
 
 /* On mouse-over, add a deeper shadow */
